# CMakePrecompiledHeader

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  PrecompiledHeader.cmake  README.md
TestProject/: CMakeLists.txt
TestProject/incGlobal/: inc_global.h
TestProject/incSys/: inc_sys.h
TestProject/l1/: CMakeLists.txt  main.cpp
TestProject/l1/include/: lib1.h
TestProject/l2/: CMakeLists.txt  main.cpp
TestProject/l2/include/: lib2.h
TestProject/proj/: CMakeLists.txt
TestProject/proj/src/: StdAfx.h  main.cpp
