add_executable( proj src/main.cpp src/StdAfx.cpp )
target_include_directories( proj PRIVATE include )
#add_dependencies( proj l1 l2 )
target_link_libraries( proj l1 l2 )
target_compile_definitions( proj PRIVATE PROJ_CD )
target_compile_options( proj PRIVATE -DPROJ_CO )
target_precompiled_header( proj src/StdAfx.h )
